# WakeWord-Detection

./: .gitignore  README.md  checkpoint  for_inference.ckpt.data-00000-of-00001  for_inference.ckpt.index  pyproject.toml
data_new/: dev.h5  test.h5
data_new/original/: CTC_input_40_151_conv_filt_32_filt_size_5_20_stride_2_8_rnn_layers_2_rnn_units_32_rnn_type_gru_dropout_0.0_activation_relu_pos_percentage_1.0_detect.h5  CTC_input_40_151_conv_filt_32_filt_size_5_20_stride_2_8_rnn_layers_2_rnn_units_32_rnn_type_gru_dropout_0.0_activation_relu_pos_percentage_1.0_encode.h5  detect-quant.tflite  detect.tflite  encode-quant.tflite
data_new/tflite/: encode.tflite
spokestack/: ring_buffer.py
spokestack/io/: pyaudio.py
utils/: evaluate_models.py  preprocess_dataset.py
wwdetect/CRNN/: train.py
